--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,5 +5,5 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx
-COPY --from=builder /app/build /usr/share/nginx/html
+#FROM nginx
+#COPY --from=builder /app/build /usr/share/nginx/html
