--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
-services: docker
+services: 
+  - docker
 before_install:
   - docker build -t sandeep/react-app -f Dockerfile.dev .
 script:
