--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ sudo: required
 services: 
   - docker
 before_install:
-  - docker build -t sandeep/react-app -f Dockerfile.dev .
+  - docker build -t sandeep/react-app  .
 script:
   - docker run sandeep/react-app npm run test -- --coverage
